* [Will Bryant] fixed makefile for MacOSX Tiger and Leopard
* [Maria Gullickson] fixed a 'divide by 0' error in PNM plugin and FreeImage_Rescale function
* [Yves Schmid] fixed a bug with Exif metadata reading in TIFF images
* [Herve Drolon] fixed some possible 64-bit portability issues with pointer calculations
* [wangyn] fixed a bug with transparency handling of indexed images in PNG plugin

November 19th, 2007 - 3.10.0
! FreeImage now uses libTIFF 3.9.0beta (CVS patch 2007-10-05)
! FreeImage now uses OpenJPEG 1.2.0 (SVN patch 2007-07-13)
! FreeImage now uses OpenEXR 1.6.1
! FreeImage now uses libPNG 1.2.23
! FreeImage now hides its internal functions and internal libraries when compiled with gcc
- [Herve Drolon] removed VS C+ 6.0 project files : this IDE is no longer supported because of OpenEXR
+ [Herve Drolon] added VS 2005 project files
+ [Herve Drolon] added full support for the OpenEXR format
+ [Herve Drolon] added full support for the JPEG-2000 format
+ [Herve Drolon] added FreeImage_TmoFattal02 tone mapping operator
+ [Ryan Rubley] added support for RGB vs BGR regardless of endian
+ [Herve Drolon] added FreeImage_MultigridPoissonSolver
+ [Carsten Klein] added FreeImage_PreMultiplyWithAlpha
+ [Carsten Klein] added __stdcall version of FreeImage_OutputMessage
+ [Carsten Klein] added new palette and color manipulation functions (see below) : 
                  added FreeImage_SetTransparentIndex
                  added FreeImage_GetTransparentIndex
                  added FreeImage_GetAdjustColorsLookupTable
                  added FreeImage_AdjustColors
                  added FreeImage_ApplyColorMapping
                  added FreeImage_SwapColors
                  added FreeImage_ApplyPaletteIndexMapping
                  added FreeImage_SwapPaletteIndices
* [Herve Drolon] fixed a bug in TIFF plugin when reading 8-bit + 8-bit alpha images
* [Herve Drolon] fixed a bug in TIFF plugin when reading images with uncommon bitdepths